# rhea-baremetal

./: .Jenkinsfile  .gitignore  CMakeLists.txt  README.md  buid_all.sh  build_all.sh  targets.cmake
apps/axi_dma/: app.cmake  build.sh
apps/axi_dma/inc/: dma.h
apps/axi_dma/src/: main.c
apps/bl33_test/: app.cmake  build.sh  linker.ld
apps/bl33_test/src/: main.c
apps/cipher/: .app.cmake.swo  app.cmake  build.sh  xgdb.sh
apps/cipher/inc/: cipher.h  cipher_debug.h  cipher_test_debg.h
apps/cipher/src/: cipher_ecc_test.c  cipher_test.c  efuse_sec_test.c  hash_test.c  ic_pka.c  main.c  main_qemu.c
apps/clci/: app.cmake  build.sh
apps/clci/inc/: clci_api.h  clci_common.h  clci_error.h  config.h  doorbell.h  errno.h  log.h  mailbox_drv.h  reg_map.h  ring_buf.h  types.h  utils.h
apps/clci/src/: clci_api.c  clci_error.c  commands_sys.c  mailbox_drv.c  mailbox_sys.c  main.c
apps/cmd_client/: app.cmake  build.sh
apps/cmd_client/inc/: a5xx_alink.h  agic_cmdqueue.h  agic_cmdqueue_extend.h  agic_sprintf.h  c2c_ioctl.h  c2c_machine.h
apps/cmd_client/src/: agic_cmdqueue.c  agic_sprintf.c  c2c_ioctl.c  c2c_machine.c  main.c
apps/d2d/: app.cmake  build.sh
apps/d2d/src/: main.c
apps/d2d_c2c/: app.cmake  build.sh
apps/d2d_c2c/src/: main.c  pcie_ep.c  pcie_ep_host.c  pcie_rc.c
apps/dw_dma/: app.cmake
apps/dw_mbox_a2b/: app.cmake  build.sh
apps/dw_mbox_a2b/src/: main.c
apps/freertos/: app.cmake  build.sh  linker.ld
apps/freertos/inc/: FreeRTOSConfig.h
apps/freertos/src/: freertos_port.c  main.c
apps/fwu/fwu_sram/: app.cmake  build.sh  linker.ld
apps/fwu/ns_bl1u/: app.cmake  build.sh  linker.ld
apps/fwu_sram/: app.cmake  build.sh
apps/fwu_sram/src/: main.c
apps/gicv3/: app.cmake  build.sh  qemu_a55.sh
apps/gicv3/src/: gicv3_lpis.c  main.c  main_basic.c  main_d2d.c  main_lpi.c
apps/gpio/: app.cmake  build.sh
apps/gpio/src/: main.c
apps/gtimer/: app.cmake  build.sh
apps/gtimer/src/: generic_timer_test.c  main.c
apps/hello/: app.cmake  build.sh  qemu_a55.sh
apps/hello/src/: main.a55.c  main.ax65.c  main.c
apps/mmc/: app.cmake  build.sh
apps/mmc/src/: main.c
apps/ns_bl1u/: build.sh  linker.ld
apps/ns_bl1u/src/: main.c
apps/pcie_ep/: app.cmake  build.sh
apps/pcie_ep/inc/: rhea_pcie_ep.h
apps/pcie_ep/src/: main.c  rhea_pcie_ep.c
apps/pcie_ep_d2d/: app.cmake  build.sh  tran2pld.py
apps/pcie_ep_d2d/inc/: d2d_test.h
apps/pcie_ep_d2d/src/: d2d_test.c  main.c
apps/pcie_ep_hdma/: app.cmake  build.sh  tran2pld.py
apps/pcie_ep_hdma/inc/: hdma.h  lpi.h
apps/pcie_ep_pm/: boot_rom.hex  build.sh  tran2pld.py
apps/pcie_rc/: app.cmake  build.sh
apps/pcie_rc_hdma/: build.sh  tran2pld.py
apps/pwm/: app.cmake  build.sh
apps/pwm/src/: main.c  (+1 more)
apps/rom2dram/: build.sh
apps/spi/: app.cmake  build.sh
apps/timer/: app.cmake  build.sh
apps/wdt/: app.cmake  build.sh
apps/xmodem/: app.cmake  build.sh
cmake_helper/: custom_build_type.cmake  helper_func.cmake
cmake_helper/common/: compile_database.cmake  custom_build_type.cmake  out_of_source.cmake
cmake_helper/cross_compile/: generic_gcc.cmake  toolchian_file.cmake
common/: CMakeLists.txt  readme.md
common/inc/: _memmap_qemu_virt.h  _memmap_rhea.h  cdefs.h  chip.h  common.h  delay.h  memmap.h  utils_def.h  uuid.h  uuid_utils.h
hw/cpu/: cpu_arch.cmake
hw/cpu/aarch64/: CMakeLists.txt  aarch64.cmake
hw/cpu/aarch64/inc/: arch_helpers.h  asm_macros.S  assert_macros.S
hw/cpu/aarch64/linker_script/: CMakeLists.txt  linker.ld.S
hw/cpu/aarch64/misc/: misc_helpers.S
hw/cpu/aarch64/startup/: CMakeLists.txt  _main.c  config_mmu.c  entrypoint.S  exceptions.S
hw/cpu/aarch64/startup/inc/: arch.h  arch_features.h  arch_helpers.h
hw/cpu/aarch64/startup/src/: _main.c  cache_helpers.S  config_mmu.c  entrypoint.S  exceptions.S
hw/cpu/aarch64/wakeup_core/: CMakeLists.txt  wakeup_core.c
hw/cpu/aarch64/wakeup_core/inc/: wakeup_core.h
hw/cru/: CMakeLists.txt
hw/d2d/: CMakeLists.txt
hw/d2d/inc/: clci_mcu_reg.h  crc32.h  d2d_api.h  d2d_ring_buf.h  d2d_sync.h  io.h  list.h
hw/d2d/lib/inc/: clci_api.h  clci_common.h  clci_errno.h  clci_error.h  commands_common.h  commands_sys.h  config.h  doorbell.h  gicv3_lpis.h  interrupt.h  local_ctrl.h  log.h  mailbox_drv.h  mailbox_sys.h  mmio.h  platform.h  reg_map.h
hw/d2d/lib/src/: clci_api.c  clci_error.c  commands_common.c  commands_sys.c  commands_sys_v2.c  doorbell.c  gicv3_basic.c  interrupt.c  local_ctrl.c  mailbox_drv.c  mailbox_sys.c  ring_buf.c
hw/d2d/src/: crc32.c  d2d_api.c  d2d_ring_buf.c  d2d_sync.c
hw/gic/v3_v4/: CMakeLists.txt
hw/gic/v3_v4/inc/: gicv3.h
hw/gic/v3_v4/src/: _gicv3.h  gic_common.h  gicv3.c  gicv3_regs.h
hw/mailbox/: CMakeLists.txt
hw/pcie/: CMakeLists.txt
hw/pcie_ep/: CMakeLists.txt
hw/pwm/: CMakeLists.txt
hw/system_counter/: CMakeLists.txt
hw/uart/16550/: 16550.c  16550.h  CMakeLists.txt  uart.c  uart.h
hw/uart/dw_apb_uart/: CMakeLists.txt
hw/uart/dw_apb_uart/inc/: dw_apb_uart.h  dw_apb_uart_regs.h
hw/uart/dw_apb_uart/src/: dw_apb_uart.c
hw/uart/pl011/: CMakeLists.txt
hw/uart/pl011/inc/: pl011.h
hw/uart/pl011/src/: pl011.c
libs/crc/: CMakeLists.txt
libs/flash/nand/: CMakeLists.txt
libs/flash/nand/inc/: nand_flash.h  nand_flash_cmd.h
libs/flash/nand/src/: nand_flash.c
libs/flash/nor/: CMakeLists.txt
libs/flash/nor/inc/: nor_flash.h  nor_flash_port.h
libs/flash/nor/src/: nor_flash.c  nor_flash_test.c
libs/freertos/kernel/: CMakeLists.txt
libs/freertos/kernel/portable/GCC/ARM_AARCH64_SRE/: port.c  portASM.S  portmacro.h
libs/linker_script/: CMakeLists.txt  linker.a55.ld.S  linker.ax65.ld.S  linker.ld.S
libs/newlib_stubs/: CMakeLists.txt  newlib_stubs.c
libs/systimer/: CMakeLists.txt
libs/time_stamp/: CMakeLists.txt
libs/xmodem/: CMakeLists.txt
libs/xmodem/inc/: xmodem.h
libs/xmodem/src/: xmodem.c  xmodem_port.c
tools/: bin2hex.py
verification/: CMakeLists.txt
verification/component1/inc/: componet1.h
verification/component1/src/: componet1.c
verification/component2/inc/: componet2.h
verification/component2/src/: componet2.c
(+102 files in other folders)
